kubernetes/app-service.yml
apiVersion: v1
kind: Service
metadata:
  name: tfm-app-service
  labels:
    app: tfm-app
spec:
  type: NodePort
  selector:
    app: tfm
  ports:
  - port: 60001
    targetPort: 60001
