kubernetes/bot-service.yml
apiVersion: v1
kind: Service
metadata:
  name: tfm-bot-service
  labels:
    app: tfm-bot
spec:
  type: NodePort
  selector:
    app: tfm
  ports:
  - port: 61001
    targetPort: 61001
