kubernetes/db-app-service.yml
apiVersion: v1
kind: Service
metadata:
  name: tfm-db-app-service
  labels:
    app: app-db
spec:
  type: NodePort
  selector:
    app: tfm
  ports:
  - port: 60005
    targetPort: 27017
