kubernetes/db-location-service.yml
apiVersion: v1
kind: Service
metadata:
  name: tfm-db-location-service
  labels:
    app: location-db
spec:
  type: NodePort
  selector:
    app: tfm
  ports:
  - port: 60008
    targetPort: 27020
