kubernetes/db-routines-service.yml
apiVersion: v1
kind: Service
metadata:
  name: tfm-db-routines-service
  labels:
    app: routines-db
spec:
  type: NodePort
  selector:
    app: tfm
  ports:
  - port: 60007
    targetPort: 27019
