kubernetes/db-web-service.yml
apiVersion: v1
kind: Service
metadata:
  name: tfm-db-web-service
  labels:
    app: web-db
spec:
  type: NodePort
  selector:
    app: tfm
  ports:
  - port: 60006
    targetPort: 27018
