kubernetes/frontend-service.yml
apiVersion: v1
kind: Service
metadata:
  name: tfm-frontend-service
  labels:
    app: frontend
spec:
  type: NodePort
  selector:
    app: tfm
  ports:
  - port: 61000
    targetPort: 61000
