kubernetes/location-service.yml
apiVersion: v1
kind: Service
metadata:
  name: tfm-location-service
  labels:
    app: tfm-location
spec:
  type: NodePort
  selector:
    app: tfm
  ports:
  - port: 60004
    targetPort: 60004
