kubernetes/routines-service.yml
apiVersion: v1
kind: Service
metadata:
  name: tfm-routines-service
  labels:
    app: tfm-routines
spec:
  type: NodePort
  selector:
    app: tfm
  ports:
  - port: 60003
    targetPort: 60003
