kubernetes/web-service.yml
apiVersion: v1
kind: Service
metadata:
  name: tfm-web-service
  labels:
    app: tfm-web
spec:
  type: NodePort
  selector:
    app: tfm
  ports:
  - port: 60002
    targetPort: 60002
